# jvm-pybind

./: .flake8  .gitignore  .isort.cfg  LICENSE  MANIFEST.in  README.ja.md  README.md  jvm.pth  pyproject.toml  pytest.ini  reinstall.sh  setup.py
.github/workflows/: ci.yml  publish.yml
examples/hello/: main.py  pyproject.toml
examples/hello/mypkg/: Hello.java
src/jvm/: __init__.py  __main__.py  cli.py  config.py  jni.py  jvm.py  loader.py  logger.py  proxy.py  siteinit.py  stubgen.py  typeconv.py
src/jvm/import_hook/: finder.py  loader.py
tests/: conftest.py  test_config.py  test_import_hook.py  test_integration.py  test_jni.py  test_jvm.py  test_loader.py  test_proxy.py  test_typeconv.py
tests/fixtures/: test_pyproject.toml
